# MockView

./: .gitignore  README.md  populate_questions.py  pyproject.toml  test_websocket.py  upload_resume.py
agents/: interview_agent.py  report_agent.py  resume_parser.py  urls.py  views.py
core/: asgi.py  settings.py  urls.py
frontend/: package-lock.json
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/: AppShell.tsx  AppSidebar.tsx  MeshBackground.tsx  Navbar.tsx
frontend/src/lib/: theme.tsx
frontend/src/routes/: __root.tsx  auth.tsx  dashboard.tsx  index.tsx  interview.tsx  results.tsx  setup.tsx
frontend/src/services/: api.js  websocket.js
interviews/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
interviews/migrations/: 0001_initial.py
interviews/templates/: interview_room.html
questions/: admin.py  models.py  serializers.py  urls.py  views.py
questions/migrations/: 0001_initial.py
reports/: admin.py  models.py  urls.py  views.py
reports/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
