[project]
name = "MockView"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "django>=4.2.30",
    "django-cors-headers>=4.4.0",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.3.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
]
